# sample-rust-app

./: Cargo.toml
adaptor/: Cargo.toml
adaptor/src/: lib.rs
app/: Cargo.toml
app/src/: lib.rs  main.rs
application/: Cargo.toml
application/src/: error.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  models.rs
domain/src/models/: backlog.rs  item.rs  task.rs  user_story.rs
ports/: Cargo.toml
ports/src/: error.rs  lib.rs
